--- a/sass/blocks/_all.sass
+++ b/sass/blocks/_all.sass
@@ -226,7 +226,7 @@
       grid-template-columns: repeat(2, 1fr )
     @media   ( max-width: 768px )
       grid-template-columns: 1fr
-    @media   ( max-width: 320px )
+    @media   ( max-width: 418px )
       gap: 16px
   &__recent-link
     display: block
